fixed makefile to clean without error

--- a/repoGit/Assignment01/starter_code/makefile
+++ b/repoGit/Assignment01/starter_code/makefile
@@ -2,10 +2,10 @@
 
 all: project
 
-clean: rm -f project *.o
+clean:
+	rm -f project *.o
 
 project: main.o Node.o NodeList.o PathSolver.o
-
 	g++ -Wall -Werror -std=c++14 -O -o $@ $^
 
 %.o: %.cpp
