--- a/repoGit/Assignment01/starter_code/makefile
+++ b/repoGit/Assignment01/starter_code/makefile
@@ -2,13 +2,14 @@
 
 all: project
 
+
 clean:
 	rm -f project *.o
 
 project: main.o Node.o NodeList.o PathSolver.o
-	g++ -Wall -Werror -std=c++14 -O -o $@ $^
+	g++ -Wall -Werror -std=c++14 -O -g -o $@ $^
 
 %.o: %.cpp
-	g++ -Wall -Werror -std=c++14 -O -c $^
+	g++ -Wall -Werror -std=c++14 -O -g -c $^
 
 
