--- a/repoGit/Assignment01/starter_code/.vscode/launch.json
+++ b/repoGit/Assignment01/starter_code/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/project",
-            "args": ["<", "${fileDirname}/sampleTest/1leftToRight.env"],
+            "args": ["<", "${fileDirname}/sampleTest/sample08.env"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
